2005-10-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2005-10-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_remove) : Check for the proper return values
	from the server and return the appropriate status back.
	* calendar/e-cal-backend-exchange.c (remove_calendar) : Similar
	* mail/mail-stub-exchange.c (delete_folder) : Similar
	This fixes #312848.

2005-10-04  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.4.1
	* NEWS : Updated

2005-10-03  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_ical) : Fixed some
	memory leaks. Patch was submitted by Veerapuram Varadhan.
	* addressbook/e-book-backend-gal.c : Fixed some warnings
	* camel/camel-exchange-store.c : Similar

2005-09-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-store.c (make_folder_info): Strip the semicolon
	from the uri. And also create the folder path properly.
	* storage/exchange-component.c (impl_upgradeFromVersion)
	(config_listener_account_created): Create the account_filename
	separately now.
	(exchange_component_get_account_for_uri): Synchronise the rescan tree
	with a lock
	* storage/exchange-config-listener.c (update_foreign_uri)
	(migrate_foreign_hierarchy)(ex_set_relative_uri) : Added new
	(migrate_account_esource) : Update the new relative uri.
	(exchange_config_listener_migrate_esources) : Take care of foreign uri
	as well.

2005-09-28  Arunprakash  <arunp@novell.com>

	* mail/mail-stub-exchange.c (append_message) : Unread flag has to be
	explicitly set for unread messages. Exchange server assumes read as
	default for appended messages.
	** Fixes #239641.

2005-09-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object): Fix a
	memory leak. Fixes #314019

2005-09-15  Arunprakash  <arunp@novell.com>
